--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Javascript</title>
 </head>
 <body>
-    
-
+    <p>HTML5</p>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
