DOM begin (old methods)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Javascript</title>
 </head>
 <body>
-    <p>HTML5</p>
+    <h1 class="main-title">What is DOM?</h1>
+    <p>Document Object Model</p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fugit exercitationem praesentium cumque.</p>
+    <p class="text">Lorem ipsum second paragraph of text.</p>
+    <hr>
+    <div id="playground">playground wrapper</div>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
