--- a/index.html
+++ b/index.html
@@ -12,7 +12,25 @@
     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fugit exercitationem praesentium cumque.</p>
     <p class="text">Lorem ipsum second paragraph of text.</p>
     <hr>
-    <div id="playground">playground wrapper</div>
+    <div id="playground">
+        <span>playground wrapper</span>
+        <ul class="list">
+            <li class="list-item">2</li>
+            <li class="list-item">1</li>
+            <li class="list-item">3</li>
+            <li class="list-item">4</li>
+            <li class="list-item">5</li>
+        </ul>
+        <div class="subplayground">
+            <ul class="list">
+                <li class="list-item">2</li>
+                <li class="list-item">1</li>
+                <li class="list-item">3</li>
+                <li class="list-item">4</li>
+                <li class="list-item">5</li>
+            </ul>
+        </div>
+    </div>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
