inner html, change inner html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fugit exercitationem praesentium cumque.</p>
     <p class="text">Lorem ipsum second paragraph of text.</p>
     <hr>
+    <input type="text" placeholder="i am input">
     <div id="playground">
         <span>playground wrapper</span>
         <ul class="list">
