--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Document Object Model</p>
     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fugit exercitationem praesentium cumque.</p>
     <p class="text">Lorem ipsum second paragraph of text.</p>
+    <a href="https://google.com" target="blank" title="click!!">goOgle</a>
     <hr>
     <input type="text" placeholder="i am input">
     <div id="playground">
