--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+    <style>
+        .box{
+            height:100px;
+            width:100px;
+            border: 1px solid black;
+        }
+        .red{
+            background-color: red;
+        }
+        .blue{
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
     <h1 class="main-title">What is DOM?</h1>
@@ -12,9 +25,13 @@
     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fugit exercitationem praesentium cumque.</p>
     <p class="text">Lorem ipsum second paragraph of text.</p>
     <a href="https://google.com" target="blank" title="click!!">goOgle</a>
-    <hr>
     <input type="text" placeholder="i am input">
-    <div id="playground">
+    <hr>
+    <div id="box1" class="box">
+    </div>
+    <div id="box2" class="box">
+    </div>
+    <!--- <div id="playground">
         <span>playground wrapper</span>
         <ul class="list">
             <li class="list-item">2</li>
@@ -31,7 +48,7 @@
                 <li class="list-item">4</li>
                 <li class="list-item">5</li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <script src="script.js" type="text/javascript"></script>
 </body>
