--- a/index.html
+++ b/index.html
@@ -5,51 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <style>
-        .box{
-            height:100px;
-            width:100px;
-            border: 1px solid black;
-        }
-        .red{
-            background-color: red;
-        }
-        .blue{
-            background-color: blue;
-        }
-    </style>
 </head>
 <body>
-    <h1 class="main-title">What is DOM?</h1>
-    <p>Document Object Model</p>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fugit exercitationem praesentium cumque.</p>
-    <p class="text">Lorem ipsum second paragraph of text.</p>
-    <a href="https://google.com" target="blank" title="click!!">goOgle</a>
-    <input type="text" placeholder="i am input">
-    <hr>
-    <div id="box1" class="box">
-    </div>
-    <div id="box2" class="box">
-    </div>
-    <!--- <div id="playground">
-        <span>playground wrapper</span>
-        <ul class="list">
-            <li class="list-item">2</li>
-            <li class="list-item">1</li>
-            <li class="list-item">3</li>
-            <li class="list-item">4</li>
-            <li class="list-item">5</li>
-        </ul>
-        <div class="subplayground">
-            <ul class="list">
-                <li class="list-item">2</li>
-                <li class="list-item">1</li>
-                <li class="list-item">3</li>
-                <li class="list-item">4</li>
-                <li class="list-item">5</li>
-            </ul>
-        </div> -->
-    </div>
+    <h1>What is DOM?</h1>
+    <input type="text" placeholder="Новый текст заголовка">
+    <button>Изменить!</button>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
