--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+    <style>
+        .box1{
+            display:flex;
+            align-items: center;
+            justify-content: center;
+            width:300px;
+            height:300px;
+            background: red;
+        }
+        .box2{
+            width:150px;
+            height:150px;
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
-    <h1>What is DOM?</h1>
-    <input type="text" placeholder="Новый текст заголовка">
-    <button>Изменить!</button>
+    <h1>JavaScript events?</h1>
+    
+    <div id="1" class="box1">
+        <div id="2" class="box2"></div>
+    </div>
+
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
