--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <body>
     <h1>JavaScript events?</h1>
     
+    <a href="http://google.com" target="_blank">Toggle</a>
+    
     <div id="1" class="box1">
         <div id="2" class="box2"></div>
     </div>
