--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <style>
+    <!--<style>
         .box1{
             display:flex;
             align-items: center;
@@ -19,17 +19,32 @@
             height:150px;
             background-color: blue;
         }
-    </style>
+    </style> -->
 </head>
 <body>
-    <h1>JavaScript events?</h1>
-    
-    <a href="http://google.com" target="_blank">Toggle</a>
-    
-    <div id="1" class="box1">
-        <div id="2" class="box2"></div>
+    <h1>JavaScript events</h1>
+    <div id="wrapper">
+        <p class='color'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, amet!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, velit.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, amet!</p>
+        <ul>
+            <li class='color'>one</li>
+            <li>two</li>
+            <li>three</li>
+            <li>four</li>
+        </ul>
     </div>
 
+
+
+
+
+    <!--<a href="http://google.com" target="_blank">Toggle</a>
+    <div id="1" class="box1">
+        <div id="2" class="box2"></div>
+    </div>-->
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
