--- a/index.html
+++ b/index.html
@@ -5,46 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <!--<style>
-        .box1{
-            display:flex;
-            align-items: center;
-            justify-content: center;
-            width:300px;
-            height:300px;
-            background: red;
-        }
-        .box2{
-            width:150px;
-            height:150px;
-            background-color: blue;
-        }
-    </style> -->
 </head>
 <body>
-    <h1>JavaScript events</h1>
-    <div id="wrapper">
-        <p class='color'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, amet!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, velit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, amet!</p>
-        <ul>
-            <li class='color'>one</li>
-            <li>two</li>
-            <li>three</li>
-            <li>four</li>
-        </ul>
-    </div>
+    <h1>JavaScript extra</h1>
 
+    <button id="alert">Alert</button>
 
+    <button id="confirm">confirm</button>
 
+    <button id="prompt">prompt</button>
 
-
-    <!--<a href="http://google.com" target="_blank">Toggle</a>
-    <div id="1" class="box1">
-        <div id="2" class="box2"></div>
-    </div>-->
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
